<resources>
    <string name="app_name">RockPaperScissorsApp</string>
    <string name="title">Rock, paper, scissors</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="play">Play</string>
    <string name="computerspick">Computer picked: </string>
    <string name="victory">You win!</string>
    <string name="loss">You loose!</string>
    <string name="tie">Tie!</string>
    <string name="invalid">Make your choice!</string>
</resources>