<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/purple_200"
        />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        >

        <RadioButton
            android:id="@+id/rock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rock"
            android:textSize="30sp"
            android:layout_margin="10sp"
            />

        <RadioButton
            android:id="@+id/paper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paper"
            android:textSize="30sp"
            android:layout_margin="10sp"
            />

        <RadioButton
            android:id="@+id/scissors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scissors"
            android:textSize="30sp"
            android:layout_margin="10sp"
            />

    </RadioGroup>

    <Button
        android:id="@+id/playbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radiogroup"
        android:layout_margin="20sp"
        android:text="@string/play"
        android:textSize="50sp"
        />

    <TextView
        android:id="@+id/computerspick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playbutton"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:text="@string/computerspick"
        android:layout_margin="10sp"
        />

    <TextView
        android:id="@+id/computerschoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/computerspick"
        android:layout_margin="10sp"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/computerschoice"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        android:layout_margin="20sp"
        />

</RelativeLayout>